# actix-postgres-example

./: .env  Cargo.toml  README.md
src/: main.rs  model.rs  routes.rs  schema.rs
