[package]
name = "hello-postgres"
version = "0.1.0"
authors = ["SaltyAom <aomkirby@mystiar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.1.1"

serde = "1.0"
serde_json = "1.0"

diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
r2d2 = "0.8.9"

dotenv = "0.15"
futures = "0.3.5"